--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,29 +3,37 @@
     padding: 0;
     border: 0;
 }
-html, body{
-    height: 100%;
-}
+
 body {
     font-family: Calibri, sans-serif;
     color: #777777;
 }
 
-nav {
-    overflow: hidden;
+header{
+    width: 100%;
 }
 
-h2{
+nav {
+    /* overflow: hidden; */
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+nav > a{
+    text-decoration: none;
+}
+
+a > h2{
+    flex: 1;
     text-transform: uppercase;
     letter-spacing: 2px;
     color: #555555;
 }
 
 #company-name{
-    float: left;
     font-size: 140%;
-    margin-left: 3.5%;
-    margin-right: 3.5%;
 }
 
 #muscle-valley-logo{
@@ -34,18 +42,18 @@ h2{
 }
 
 #menu{
-    float: right;
+    display: flex;
+    justify-content: space-evenly;
     font-size: 100%;
     list-style-type: none;
     letter-spacing: 4px;
 }
-#company-name, #menu{
-    line-height: 50px;
-}
 
 #menu li{
-    float: left;
-    margin-right: 30px;
+    flex-direction: row;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-top: 10px;
 }
 
 #menu a{
@@ -59,4 +67,26 @@ h2{
 
 section{
     overflow: hidden;
+}
+
+footer{
+    height: 150px;
+}
+
+.social-media{
+    text-align: center;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+}
+
+.social-media li{
+    list-style-type: none;
+}
+
+.social-media i{
+    font-size: 160%;
+    margin: 1%;
+    padding: 5%;
+    color: #777777;
 }
