--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,16 +9,10 @@ body {
     color: #777777;
 }
 
-header{
-    width: 100%;
-}
-
 nav {
-    /* overflow: hidden; */
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    width: 100%;
 }
 
 nav > a{
@@ -26,7 +20,6 @@ nav > a{
 }
 
 a > h2{
-    flex: 1;
     text-transform: uppercase;
     letter-spacing: 2px;
     color: #555555;
@@ -46,14 +39,11 @@ a > h2{
     justify-content: space-evenly;
     font-size: 100%;
     list-style-type: none;
-    letter-spacing: 4px;
+    letter-spacing: 2px;
 }
 
 #menu li{
-    flex-direction: row;
-    margin-left: 15px;
-    margin-right: 15px;
-    margin-top: 10px;
+    margin: 10px 15px;
 }
 
 #menu a{
@@ -63,10 +53,6 @@ a > h2{
 
 #menu a:hover{
     border-bottom: 1px solid #777777;
-}
-
-section{
-    overflow: hidden;
 }
 
 footer{
