--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ nav > a{
     text-decoration: none;
 }
 
-a > h2{
+a > h1{
     text-transform: uppercase;
     letter-spacing: 2px;
     color: #555555;
@@ -27,11 +27,13 @@ a > h2{
 
 #company-name{
     font-size: 140%;
+    margin-top: 10px;
 }
 
 #muscle-valley-logo{
     width: 55px;
     height: auto;
+    margin-top: -10px;
 }
 
 #menu{
@@ -55,14 +57,11 @@ a > h2{
     border-bottom: 1px solid #777777;
 }
 
-
-#home-hero-outer{
-    display: flex;
-    flex-direction: column;
+.home-hero-outer{
+    position: relative;
 }
 
-
-#home-hero-image{
+.home-hero-image{
     max-width: 2400px;
     max-height: 1602px;
     width: 100%;
@@ -91,15 +90,43 @@ a > h2{
   }
 
 #join-us{
+    position: absolute;  
+    left: 50%;
+    top: 90%;       
+    transform: translate(-50%, -50%);
+
     text-transform: uppercase;
+
     letter-spacing: 2px;
     background-color: rgba(241, 109, 107, 1);
-    text-align: center;
 
     -webkit-animation: flickerAnimation 8s infinite;
     -moz-animation: flickerAnimation 8s infinite;
     -o-animation: flickerAnimation 8s infinite;
-     animation: flickerAnimation 8s infinite;
+    animation: flickerAnimation 8s infinite;
+}
+
+.carousel-header{
+    margin: 20px 0 0 0;
+    background-color: #777;
+    color: black;
+    font-size: 120%;
+}
+
+.carousel-item{
+    max-width: 2400px;
+    max-height: 1602px;
+    width: 100%;
+    height: 200px;
+    background: #777;
+    color: white;
+}
+
+.carousel-text{
+    letter-spacing: 2px;
+    background-color: #777;
+    background-color: rgba(199, 199, 199, .75);
+    color: black;
 }
 
 footer{
