--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,22 @@
+
+/* Global Styles for sheets */
 * {
     margin: 0;
     padding: 0;
     border: 0;
 }
 
+ul {
+    padding-left: 0;
+}
+
 body {
     font-family: Calibri, sans-serif;
-    color: #777777;
+    color: #fafafa;
+    background-color: rgba(22,18,15, 0.998);
 }
+
+
 
 nav {
     display: flex;
@@ -22,7 +31,7 @@ nav > a{
 a > h1{
     text-transform: uppercase;
     letter-spacing: 2px;
-    color: #555555;
+    color: #fafafa;
     line-height: 1px;
 }
 
@@ -35,7 +44,7 @@ a > h1{
 #muscle-valley-logo{
     width: 55px;
     height: auto;
-    /* margin-top: -10px; */
+    color: #fafafa;
 }
 
 #menu{
@@ -85,6 +94,7 @@ nav > ul {
     max-height: 1602px;
     width: 100%;
     height: auto;
+    opacity: 0.5;
 }
 
 iframe{
@@ -118,11 +128,7 @@ iframe{
     left: 50%;
     top: 90%;       
     transform: translate(-50%, -50%);
-
-    text-transform: uppercase;
-
-    letter-spacing: 2px;
-    background-color: rgba(241, 109, 107, 1);
+    background-color: rgba(54, 46, 46, .8);
 
     -webkit-animation: flickerAnimation 8s infinite;
     -moz-animation: flickerAnimation 8s infinite;
@@ -130,11 +136,30 @@ iframe{
     animation: flickerAnimation 8s infinite;
 }
 
+#join-us a{
+    text-decoration: none;
+    color: rgba(250, 250, 250, .8);
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+
+#join-us:hover{
+    -webkit-animation-play-state: paused;
+    -moz-animation-play-state: paused;
+    -o-animation-play-state: paused;
+     animation-play-state: paused;
+}
+
+#join-us a:hover{
+    color: red;
+}
+
 .carousel-header{
     margin: 20px 0 0 0;
     background-color: #777;
-    color: black;
+    /* color: black; */
     font-size: 120%;
+    text-align: center;
 }
 
 .carousel-item{
@@ -142,14 +167,11 @@ iframe{
     max-height: 1602px;
     width: 100%;
     height: 200px;
-    background: #777;
-    color: white;
 }
 
 .carousel-text{
     letter-spacing: 2px;
-    background-color: #777;
-    background-color: rgba(199, 199, 199, .75);
+    background-color: rgba(199, 199, 199, .6);
     color: black;
 }
 
@@ -186,11 +208,16 @@ iframe{
 
 div.testimonial > p{
     padding: 5px;
-    border: black 1px solid;
+    border: rgba(250, 250, 250, .1) 1px solid;
+    border-radius: 10px;
+    background-color: rgba(199, 199, 199, .1)
 }
 
 footer{
-    height: 150px;
+    /* margin-top: 10px; */
+    padding-top: 15px;
+    background-color: rgba(250, 250, 250, .05);
+    /* height: 150px; */
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
@@ -203,7 +230,7 @@ footer{
         center center
     ;  
     width: 340px;
-    height: 100%;
+    height: 240px;
     margin-bottom: 10px;
 }
 
@@ -233,4 +260,54 @@ footer{
 .social-media i{
     font-size: 160%;
     color: #777777;
+}
+
+.social-media i:hover{
+    color: rgb(101, 15, 30);
+}
+
+@media screen and (min-width:600px){
+    
+    .gym-slogan{   
+        font-size: 1.5em;
+    }
+
+    .carousel-header{
+        font-size: 1.5em;
+    }
+
+    .carousel-item{
+        height: 90vh;
+    }
+    .carousel-caption{
+        right: 35%;
+        left: 35%;
+    }
+
+    nav {
+        justify-content: space-between;
+        margin-left: 40px;
+        margin-right: 40px;
+    }
+    
+}
+
+@media screen and (min-width:900px){
+    
+    .gym-slogan{   
+        font-size: 2em;
+    }
+
+    .carousel-header{
+        font-size: 2em;
+    }
+    
+}
+
+@media screen and (min-width:1200px){
+    
+    .gym-slogan{   
+        font-size: 3em;
+    }
+    
 }
