--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,11 +18,14 @@ body {
 
 /* <!-- Header --> */
 
+header{
+    background-color: rgba(250, 250, 250, .05);
+}
+
 nav {
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    background-color: rgba(250, 250, 250, .05);
 }
 
 nav > a{
@@ -131,7 +134,6 @@ iframe{
     left: 50%;
     top: 90%;       
     transform: translate(-50%, -50%);
-    background-color: rgba(54, 46, 46, .8);
 
     -webkit-animation: flickerAnimation 8s infinite;
     -moz-animation: flickerAnimation 8s infinite;
@@ -141,7 +143,7 @@ iframe{
 
 #join-us a{
     text-decoration: none;
-    color: rgba(250, 250, 250, .8);
+    color: #ff4d00;
     text-transform: uppercase;
     letter-spacing: 2px;
 }
@@ -154,7 +156,7 @@ iframe{
 }
 
 #join-us a:hover{
-    color: rgb(101, 15, 30);
+    color: 	#ff0000;
 }
 
  /* <!-- Home Carousel --> */
@@ -204,6 +206,49 @@ iframe{
     max-height: 756px;
     width: 100%;
     height: auto;
+}
+
+ /* <!-- Join-us Gym Membership Options --> */
+
+.join-us-hero{
+    background: url(../images/danielle-cerullo-CQfNt66ttZM-unsplash.jpg)
+                no-repeat
+                center
+                center;
+    height: 735px;
+    width: 100%;
+}
+
+.membership-levels{
+    text-align: center;
+    margin: 5px;
+    padding: 5px;
+    border: rgba(250, 250, 250, .1) 1px solid;
+    border-radius: 10px;
+    background-color: rgba(199, 199, 199, .5);
+    color: black;
+}
+
+.membership-levels h4{
+    text-decoration: underline;
+}
+
+.membership-price{
+    font-size: 130%;
+    font-weight: 800;
+}
+
+.join-us-button{
+    padding: 0 10px;
+    font-size: 140%;
+    font-weight: 600;
+    letter-spacing: 2px;
+    color: rgba(255, 0, 0, 0.75);
+    background-color: transparent;
+}
+
+.join-us-button:hover{
+    background-color: rgba(250, 250, 250, 05);
 }
 
  /* <!-- Home Testimonials -->S */
