--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,7 +215,7 @@ iframe{
                 no-repeat
                 center
                 center;
-    height: 735px;
+    height: 840px;
     width: 100%;
 }
 
@@ -233,6 +233,10 @@ iframe{
     text-decoration: underline;
 }
 
+.membership-levels ul{
+    list-style-type: none;
+}
+
 .membership-price{
     font-size: 130%;
     font-weight: 800;
@@ -248,8 +252,15 @@ iframe{
 }
 
 .join-us-button:hover{
-    background-color: rgba(250, 250, 250, 05);
+    background-color: rgba(250, 250, 250, 0.5);
 }
+
+ /* <!-- Model Body --> */
+
+ .modal-content{
+     color: black;
+     background-color: rgb(200, 200, 200);
+ }
 
  /* <!-- Home Testimonials -->S */
 
@@ -318,7 +329,7 @@ footer{
 }
 
 .social-media i:hover{
-    color: rgb(101, 15, 30);
+    color: #ff0000;
 }
 
 @media screen and (min-width:600px){
@@ -344,6 +355,8 @@ footer{
         margin-left: 40px;
         margin-right: 40px;
     }
+
+ 
     
 }
 
@@ -355,6 +368,19 @@ footer{
 
     .carousel-header{
         font-size: 2em;
+    }
+    
+    .membership-options{
+        display: flex;
+        justify-content: space-evenly;
+        justify-items: center;
+    }
+
+    .membership-levels{
+        width: 30%;
+        /* height: 50vh; */
+        text-align: center;
+     
     }
     
 }
