--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,8 +96,7 @@ nav > ul {
 }
 
 .home-hero-image{
-    max-width: 2400px;
-    max-height: 1602px;
+    object-fit: cover;
     width: 100%;
     height: auto;
     opacity: 1;
@@ -108,37 +107,25 @@ iframe{
     height: auto;
 }
 
-  @keyframes flickerAnimation {
-    0%   { opacity:1; }
-    50%  { opacity:0; }
-    100% { opacity:1; }
-  }
-  @-o-keyframes flickerAnimation{
-    0%   { opacity:1; }
-    50%  { opacity:0; }
-    100% { opacity:1; }
-  }
-  @-moz-keyframes flickerAnimation{
-    0%   { opacity:1; }
-    50%  { opacity:0; }
-    100% { opacity:1; }
-  }
-  @-webkit-keyframes flickerAnimation{
-    0%   { opacity:1; }
-    50%  { opacity:0; }
-    100% { opacity:1; }
-  }
-
+@-webkit-keyframes glow {
+    to {
+         border-color: rgba(50, 226, 241, 0.9);
+    -webkit-box-shadow: 0 0 10px rgba(50, 226, 241, 0.9);
+       -moz-box-shadow: 0 0 10px rgba(50, 226, 241, 0.9);
+            box-shadow: 0 0 10px rgba(50, 226, 241, 0.9);
+    }
+}
 #join-us{
     position: absolute;  
     left: 50%;
     top: 90%;       
     transform: translate(-50%, -50%);
+    padding: 0 2%;
 
-    -webkit-animation: flickerAnimation 8s infinite;
-    -moz-animation: flickerAnimation 8s infinite;
-    -o-animation: flickerAnimation 8s infinite;
-    animation: flickerAnimation 8s infinite;
+    -webkit-animation: glow 3.0s infinite alternate;  
+    -webkit-transition: border 3.0s linear, box-shadow 3.0s linear;
+    -moz-transition: border 3.0s linear, box-shadow 3.0s linear;
+    transition: border 3.0s linear, box-shadow 3.0s linear;
 }
 
 #join-us a{
@@ -168,13 +155,14 @@ iframe{
     text-transform: uppercase;
     text-align: center;
     margin-bottom: 0;
+    padding: 10px 0;
 }
 
 .carousel-item{
-    max-width: 2400px;
-    max-height: 1602px;
+    object-fit: cover;
     width: 100%;
-    height: 200px;
+    height: auto;
+    
 }
 
 .carousel-text{
@@ -215,8 +203,11 @@ iframe{
                 no-repeat
                 center
                 center;
-    height: 840px;
+    height: 100%;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .membership-levels{
@@ -342,9 +333,6 @@ footer{
         font-size: 1.5em;
     }
 
-    .carousel-item{
-        height: 90vh;
-    }
     .carousel-caption{
         right: 35%;
         left: 35%;
@@ -356,7 +344,9 @@ footer{
         margin-right: 40px;
     }
 
- 
+    .full-viewport{
+        height: 100%;
+    }
     
 }
 
@@ -388,7 +378,18 @@ footer{
 @media screen and (min-width:1200px){
     
     .gym-slogan{   
-        font-size: 3em;
+        font-size: 4em;
+    }
+
+    #join-us{
+        font-size: 3.5em;
+    }
+
+    .carousel-header{
+        font-size: 3.5em;
+    }
+    .carousel-text{
+        font-size: 3.5em;
     }
     
 }
