--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,7 +107,7 @@ iframe{
     height: auto;
 }
 
-@-webkit-keyframes glow {
+@keyframes glow {
     to {
          border-color: rgba(50, 226, 241, 0.9);
     -webkit-box-shadow: 0 0 10px rgba(50, 226, 241, 0.9);
@@ -123,7 +123,7 @@ iframe{
     transform: translate(-50%, -50%);
     padding: 0 2%;
 
-    -webkit-animation: glow 3.0s infinite alternate;  
+    animation: glow 3.0s infinite alternate;  
     -webkit-transition: border 3.0s linear, box-shadow 3.0s linear;
     -moz-transition: border 3.0s linear, box-shadow 3.0s linear;
     transition: border 3.0s linear, box-shadow 3.0s linear;
