style: standardised colour scheme rgb or rbga & add active sheet css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ ul {
 
 body {
     font-family: Calibri, sans-serif;
-    color: #fafafa;
+    color: rgb(250, 250, 250);
     background-color: rgba(22,18,15, 0.998);
 }
 
@@ -35,7 +35,7 @@ nav > a{
 a > h1{
     text-transform: uppercase;
     letter-spacing: 2px;
-    color: #fafafa;
+    color: rgb(250, 250, 250);
     line-height: 1px;
 }
 
@@ -48,7 +48,7 @@ a > h1{
 #muscle-valley-logo{
     width: 55px;
     height: auto;
-    color: #fafafa;
+    color: rgb(250, 250, 250);
 }
 
 #menu{
@@ -74,7 +74,12 @@ nav > ul {
 }
 
 #menu a:hover{
-    border-bottom: 1px solid #777777;
+    background-color:rgba(119, 119, 119, 0.6);
+    border-bottom: 1px solid rgb(119, 119, 119);
+}
+
+.active-sheet{
+    border-bottom: 1px solid rgb(119, 119, 119);
 }
 
  /* <!-- Home Hero Image --> */
@@ -109,10 +114,10 @@ iframe{
 
 @keyframes glow {
     to {
-         border-color: rgba(50, 226, 241, 0.9);
-    -webkit-box-shadow: 0 0 10px rgba(50, 226, 241, 0.9);
-       -moz-box-shadow: 0 0 10px rgba(50, 226, 241, 0.9);
-            box-shadow: 0 0 10px rgba(50, 226, 241, 0.9);
+        border-color: rgba(50, 226, 241, 0.9);
+        -webkit-box-shadow: 0 0 10px rgba(50, 226, 241, 0.9);
+        -moz-box-shadow: 0 0 10px rgba(50, 226, 241, 0.9);
+        box-shadow: 0 0 10px rgba(50, 226, 241, 0.9);
     }
 }
 
@@ -131,7 +136,7 @@ iframe{
 
 #join-us a{
     text-decoration: none;
-    color: #ff4d00;
+    color: rgb(255, 77, 0);
     text-transform: uppercase;
     letter-spacing: 2px;
 }
@@ -144,14 +149,14 @@ iframe{
 }
 
 #join-us a:hover{
-    color: 	#ff0000;
+    color: 	rgb(255, 0, 0);
 }
 
  /* <!-- Home Carousel --> */
 
  .carousel-header{
     background-color: rgba(199, 199, 199, .1);
-    color: #fafafa;
+    color: rgb(250, 250, 250);
     font-size: 110%;
     text-transform: uppercase;
     text-align: center;
@@ -169,7 +174,7 @@ iframe{
 .carousel-text{
     letter-spacing: 2px;
     background-color: rgba(199, 199, 199, .6);
-    color: black;
+    color: rgb(0, 0 , 0);
 }
 
 
@@ -218,7 +223,7 @@ iframe{
     border: rgba(250, 250, 250, .1) 1px solid;
     border-radius: 10px;
     background-color: rgba(199, 199, 199, .5);
-    color: black;
+    color: rgb(0, 0, 0);
 }
 
 .membership-levels h4{
@@ -251,7 +256,7 @@ iframe{
  /* <!-- Model Body --> */
 
  .modal-content{
-     color: black;
+     color: rgb(0, 0, 0);
      background-color: rgb(200, 200, 200);
  }
 
@@ -328,11 +333,11 @@ footer{
 
 .social-media i{
     font-size: 160%;
-    color: #777777;
+    color: rgb(119, 119, 119);
 }
 
 .social-media i:hover{
-    color: #ff0000;
+    color: rgb(255, 0, 0);
 }
 
 @media screen and (min-width:600px){
