--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@
     --textBoxBorder: rgba(250, 250, 250, .1);
 
     /* This is the Membership background colour */
-    --membershipBackground: rgba(199, 199, 199, .5);
+    --membershipBackground: rgba(199, 199, 199, .8);
 
     /* This is the join-us background when hovered */
     --membershipJoinHover: rgba(250, 250, 250, 0.5);
@@ -177,6 +177,7 @@ nav > ul {
     top: 90%;       
     transform: translate(-50%, -50%);
     padding: 0 2%;
+    border-radius: 10px;
 
     animation: glow 3.0s infinite alternate;  
     -webkit-transition: border 3.0s linear, box-shadow 3.0s linear;
